--- a/index.html
+++ b/index.html
@@ -611,6 +611,7 @@
                                    제11조(개인정보 처리방침 시행 및 변경)<br>
                                    이 개인정보 처리방침은 2026. 4. 1부터 적용됩니다.<br><br>
                                 </div>
+                                </div>
                                 <div class="flex items-center mt-4">
                                     <input type="checkbox" id="privacy-agree" class="w-5 h-5 text-[#6B0D16] border-gray-300 rounded focus:ring-[#6B0D16] cursor-pointer" required>
                                     <label for="privacy-agree" class="ml-2 text-sm text-gray-600 cursor-pointer">
