--- a/index.html
+++ b/index.html
@@ -1139,19 +1139,21 @@
                 engName: "Tae Sun, PARK", 
                 title: "Managing Partner", 
                 // KR Data
-                desc: ["서울대 전기.정보공학부 출신 변리사", "국내 최대 규모 로펌 출신 변리사", "SW/ICT 기술 전문 변리사"], 
+                desc: ["서울대 전기.정보공학부 출신", "김.장 법률사무소 출신", "SW/ICT 기술 전문"], 
                 detailedExperience: [
                     {
                         title: "특허출원 업무 수행",
                         items: [
-                            "반도체, SW/ICT 관련 글로벌기업의 국내 및 해외출원",
-                            "AI, 가상자산 등 첨단 분야 기술 관련 경험 다수 보유"
+                            "반도체 관련 글로벌 기업의 출원",
+                            "SW/ICT 기반 스타트업의 출원",
+                            "AI, 가상자산 등 첨단기술 경험 다수 보유"
                         ]
                     },
                     {
                         title: "특허분쟁 업무 수행",
                         items: [
-                            "반도체 증착 장비 관련 글로벌기업의 한국 분쟁사건 전담",
+                            "반도체 증착 장비 관련 글로벌 분쟁사건 전담",
+                            "국내 게임 기업의 상표권 분쟁사건 전담",
                             "국내 소부장 기업의 분쟁사건 전담"
                         ]
                     },
@@ -1159,36 +1161,42 @@
                         title: "특허자문 업무 수행",
                         items: [
                             "다국가의 현지대리인 선정 업무 지원",
-                            "IT 기술 관련 기술 동향 조사 및 무효 조사 다수 수행"
+                            "경고장 대응 경험 다수 보유",
+                            "라이선싱 관련 경험 다수 보유",
+                            "IT 기술 동향 조사 및 무효 조사 다수 수행"
                         ]
                     }
                 ],
                 education: [
                     "서울대 전기.정보공학부 졸업",
-                    "(전) 김.장 법률사무소 국제부",
-                    "(전) 가산 특허법인 SW/ICT팀"
+                    "(前) 김.장 법률사무소 국제부",
+                    "(前) 가산 특허법인 SW/ICT팀"
                 ],
                 // US Data (Added)
-                descEn: ["Seoul Nat'l Univ. (Electrical & Info. Eng.)", "Ex-Kim & Chang (Largest Firm in Korea)", "SW/ICT Specialist"],
+                descEn: ["From Seoul Nat'l Univ.", "From Kim & Chang", "SW/ICT Specialist"],
                 detailedExperienceEn: [
                     {
                         title: "Patent Prosecution",
                         items: [
-                            "Domestic and overseas patent filings for global semiconductor and SW/ICT companies",
+                            "patent filings for global semiconductor companies",
+                            "patent filings for SW/ICT based startups",
                             "Extensive experience in advanced technologies such as AI and virtual assets"
                         ]
                     },
                     {
                         title: "Patent Litigation",
                         items: [
-                            "Dedicated to Korean dispute cases for global companies related to semiconductor deposition equipment",
-                            "Dedicated to dispute cases for domestic materials/parts/equipment companies"
+                            "Dedicated to dispute cases for global companies related to semiconductor deposition equipment",
+                            "Dedicated to trademark dispute cases for domestic game companies",
+                            "Dedicated to dispute cases for domestic materials, parts, equipment companies"
                         ]
                     },
                     {
                         title: "IP Advisory",
                         items: [
                             "Support for selecting local agents in multiple countries",
+                            "Extensive experience responding to letter of warning",
+                            "Extensive experience with licensing",
                             "Conducted numerous technology trend surveys and invalidation searches related to IT technology"
                         ]
                     }
