--- a/index.html
+++ b/index.html
@@ -1178,8 +1178,8 @@
                     {
                         title: "Patent Prosecution",
                         items: [
-                            "patent filings for global semiconductor companies",
-                            "patent filings for SW/ICT based startups",
+                            "Patent filings for global semiconductor companies",
+                            "Patent filings for SW/ICT based startups",
                             "Extensive experience in advanced technologies such as AI and virtual assets"
                         ]
                     },
@@ -1684,4 +1684,5 @@
         window.addEventListener('load', init);
     </script>
 </body>
+
 </html>
