--- a/index.html
+++ b/index.html
@@ -1085,7 +1085,7 @@
                      <address class="lang-content lang-us hidden not-italic text-xs text-gray-600 font-medium tracking-widest leading-loose">
                         <div class="flex items-start mb-3">
                              <span class="font-bold text-gray-900 w-24 flex-shrink-0">Managing Partners</span>
-                             <span>Tae Sun PARK et al.</span>
+                             <span>Tae Sun, PARK et al.</span>
                         </div>
                         <div class="flex items-start mb-3">
                              <span class="font-bold text-gray-900 w-24 flex-shrink-0 block">Address</span>
@@ -1133,7 +1133,7 @@
         let currentLang = 'kr'; // 'kr' or 'us'
 
         const professionalsData = [
-            { 
+             {
                 id: "park", 
                 name: "박태선", 
                 engName: "Tae Sun, PARK", 
@@ -1144,8 +1144,9 @@
                     {
                         title: "특허출원 업무 수행",
                         items: [
-                            "반도체 관련 글로벌 기업의 출원",
+                            "반도체 관련 글로벌 기업의 출원",                           
                             "SW/ICT 기반 스타트업의 출원",
+                            "스타트업의 초기 특허 포트폴리오 구축",
                             "AI, 가상자산 등 첨단기술 경험 다수 보유"
                         ]
                     },
@@ -1161,16 +1162,19 @@
                         title: "특허자문 업무 수행",
                         items: [
                             "다국가의 현지대리인 선정 업무 지원",
-                            "경고장 대응 경험 다수 보유",
-                            "라이선싱 관련 경험 다수 보유",
+                            "글로벌 화장품 기업의 전담 자문 경험 보유",
+                            "경고장 대응, 라이선싱 경험 다수 보유",
                             "IT 기술 동향 조사 및 무효 조사 다수 수행"
                         ]
                     }
                 ],
                 education: [
                     "서울대 전기.정보공학부 졸업",
-                    "(前) 김.장 법률사무소 국제부",
-                    "(前) 가산 특허법인 SW/ICT팀"
+                    "(現) 황소 특허법률사무소 대표 변리사",
+                    "(前) 김.장 법률사무소 국제부 변리사",
+                    "(前) 가산 특허법인 SW/ICT팀 변리사",
+                    "대한변리사회(KPAA) 정회원",
+                    "조달청, 신제품인증, 신기술인증 심사위원"
                 ],
                 // US Data (Added)
                 descEn: ["From Seoul Nat'l Univ.", "From Kim & Chang", "SW/ICT Specialist"],
@@ -1180,33 +1184,37 @@
                         items: [
                             "Patent filings for global semiconductor companies",
                             "Patent filings for SW/ICT based startups",
+                            "Buliding early-stage patent porfolios for startups",
                             "Extensive experience in advanced technologies such as AI and virtual assets"
                         ]
                     },
                     {
                         title: "Patent Litigation",
                         items: [
-                            "Dedicated to dispute cases for global companies related to semiconductor deposition equipment",
-                            "Dedicated to trademark dispute cases for domestic game companies",
-                            "Dedicated to dispute cases for domestic materials, parts, equipment companies"
+                            "Specialized in global disputes related to semiconductor deposition equipment",
+                            "Specialized in trademark disputes for domestic gaming companies",
+                            "Specialized in disputes for domestic material, component, and equipment companies"
                         ]
                     },
                     {
                         title: "IP Advisory",
                         items: [
-                            "Support for selecting local agents in multiple countries",
-                            "Extensive experience responding to letter of warning",
-                            "Extensive experience with licensing",
-                            "Conducted numerous technology trend surveys and invalidation searches related to IT technology"
+                            "Support for selecting local representatives in multiple countries",
+                            "Experience in advising global cosmetics company",
+                            "Extensive experience responding to warning letters and licensing",
+                            "Extensive experience conducting IT technology trend research and invalidation searches"
                         ]
                     }
                 ],
                 educationEn: [
                     "B.S., Electrical and Computer Engineering, Seoul National University",
-                    "Former Attorney at Kim & Chang (International IP Dept.)",
-                    "Former Attorney at Kasan IP Law Firm (SW/ICT Team)"
+                    "Managing Partner, Patent Attorney at Taurus IP Law Firm",
+                    "Former Patent Attorney at Kim & Chang (International IP Dept.)",
+                    "Former Patent Attorney at Kasan IP Law Firm (SW/ICT Team)",
+                    "Regular member of the Korean Patent Attorneys Association (KPAA)",
+                    "Public Procurement Service, New Product Certification, New Technology Certification Examiner"
                 ],
-                email: "taesun.park@taurusip.com", 
+                email: "tspark@taurusip.com", 
                 phone: "02-123-4567", 
                 imgCard: "./professionals/tspark_L.webp", 
                 imgDetail: "./professionals/tspark.webp" 
@@ -1284,34 +1292,99 @@
             { 
                 id: "lee_dg", 
                 name: "이동근", 
-                engName: "Dong Geun, LEE", 
+                engName: "Dong Keun, LEE", 
                 title: "Managing Partner", 
-                desc: ["화학/바이오 분야 전문 변리사", "해외 IP 라이선싱 전문가", "스타트업 IP 컨설팅 다수"], 
+                desc: ["서강대 기계공학과 출신", "기업 특허전략 전문가", "건설 기술 전문"], 
                 detailedExperience: [
-                    "바이오/제약 분야 특허 명세서 작성 전문",
-                    "해외 IP 라이선싱 계약 및 협상 지원",
-                    "바이오 스타트업 멘토링 다수 진행",
-                    "한국바이오협회 전문 강사"
+                   {
+                        title: "기업 특허전략 업무 수행",
+                        items: [
+                            "글로벌 철강기업의 특허망 구축, 특허보증, 소송전략 수립",
+                            "글로벌 EPC 기업 기획, 계약, 분쟁 업무 수행"
+                        ]
+                    },
+                   {
+                        title: "특허출원 업무 수행",
+                        items: [
+                            "가전제품 관련 글로벌 기업 출원업무",
+                            "철강, 자동차부품 관련 글로벌 기업 출원업무",
+                            "건설, 발전 등 공기업, 글로벌 기업 출원업무",
+                            "스타트업 맞춤형 특허 발굴 및 출원업무"
+                        ]
+                    },
+                    {
+                        title: "특허분쟁 업무 수행",
+                        items: [
+                            "유럽, 북미, 일본, 중국 경쟁사 간 침해, 무효 등 글로벌 분쟁 전담",
+                            "스타트업 상표, 디자인 모조품 분쟁사건 전담",
+                            "계약 검토, 중재, 소송, 침해 분석, 무효심판 등 분쟁사건"
+                        ]
+                    },
+                    {
+                        title: "특허자문 업무 수행",
+                        items: [
+                            "화장품, 생활용품 관련 복수 스타트업 IP나래 업무 수행",
+                            "자동차강판, 자동차부품, 성형 기술, 강건재 건설 관련 특허맵, 침해 분석 및 무효 조사 다수 수행"
+                        ]
+                    }
+
                 ],
                 education: [
-                    "연세대학교 화학생명공학부 학사",
-                    "연세대학교 대학원 생명공학 석사",
-                    "제 48회 변리사 시험 합격"
+                    "서강대 기계공학과 졸업",
+                    "(現) 황소 특허법률사무소 대표 변리사",
+                    "(前) 포스코 법무실 IP전략센터",
+                    "(前) 현대건설 전략기획실",
+                    "(前) 더쎈국제특허법률사무소 파트너 변리사",
+                    "(前) 특허법인 정안 변리사",
+                    "대한변리사회(KPAA) 정회원",
+                    "초기 창업 패키지 심사위원"
                 ],
                 // US Data
-                descEn: ["Chemical/Bio Patent Attorney", "Global IP Licensing Expert", "Startup IP Consultant"],
+                descEn: ["From Sogang Univ.", "Corporate Patent Strategy Specialist", "Construction Technology Specialist"],
                 detailedExperienceEn: [
-                    "Specialized in drafting patents for Bio/Pharmaceutical fields",
-                    "Support for overseas IP licensing agreements and negotiations",
-                    "Mentored numerous Bio-startups",
-                    "Professional Instructor, Korea Biotechnology Industry Organization"
+                   {
+                        title: "Corporate Patent Strategy",
+                        items: [
+                            "Building a patent network, patent guarantees, and litigation strategies for a global steel company",
+                            "Global EPC company planning, contracts, and dispute resolution"
+                        ]
+                    },
+                   {
+                        title: "Patent Prosecution",
+                        items: [
+                            "Patent filings for global companies related to home appliances",
+                            "Patent filings for global companies related to steel and automotive components",
+                            "Patent filings for public enterprises, including construction and power generation, and global companies",                            
+                            "Customized patent discovery and application services for startups"
+                        ]
+                    },
+                    {
+                        title: "Patent Litigation",
+                        items: [
+                            "Specialized in global disputes involving infringement and invalidity between competitors in Europe, North America, Japan, and China",
+                            "Specialized in trademark and design counterfeit disputes for startups",
+                            "Contract review, arbitration, litigation, infringement analysis, and invalidation trials"
+                        ]
+                    },
+                    {
+                        title: "IP Advisory",
+                        items: [
+                            "IP Narae services for multiple startups related to cosmetics and household goods",
+                            "Patent maps, infringement analyses, and invalidity investigations conducted for automotive steel sheets, automotive parts, molding technology, and steel construction materials"
+                        ]
+                    }
                 ],
                 educationEn: [
-                    "B.S., Chemical and Biomolecular Engineering, Yonsei University",
-                    "M.S., Biotechnology, Yonsei University",
-                    "Admitted to the Korean Patent Bar (48th)"
+                    "B.S., Department of Mechanical Engineering, Sogang University",
+                    "Managing Partner, Patent Attorney at Taurus IP Law Firm",
+                    "Formerly IP Strategy Center, Legal Department, POSCO",
+                    "Formerly Hyundai Engineering & Construction Strategic Planning Office",
+                    "Former Patent Attorney at Thessen International Patent & Law Firm",
+                    "Former Patent Attorney at Jeongan Patent Firm",
+                    "Regular member of the Korean Patent Attorneys Association (KPAA)",
+                    "Early Startup Package Committee Examiner"
                 ],
-                email: "dg.lee@taurusip.com", 
+                email: "dklee@taurusip.com", 
                 phone: "02-123-4570", 
                 imgCard: "https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?auto=format&fit=crop&q=80&w=600",
                 imgDetail: "https://images.unsplash.com/photo-1519085360753-af0119f7cbe7?auto=format&fit=crop&q=80&w=800" 
@@ -1684,6 +1757,4 @@
         window.addEventListener('load', init);
     </script>
 </body>
-
 </html>
-
