--- a/index.html
+++ b/index.html
@@ -900,15 +900,15 @@
         <div class="sticky top-0 z-50 bg-white/95 backdrop-blur-sm border-b border-gray-100 py-4">
             <div class="max-w-7xl mx-auto px-6 lg:px-12 flex justify-between items-center relative">
                 <!-- 서브메뉴 리스트 : 한 줄로 표시 및 가로 스크롤 추가 -->
-                <div id="sub-nav-list" class="flex flex-nowrap overflow-x-auto no-scrollbar gap-x-6 sm:gap-x-8 gap-y-2 text-[10px] sm:text-sm text-gray-400 font-medium uppercase tracking-widest pr-8 sm:pr-16 w-full mask-linear">
+                <div id="sub-nav-list" class="flex flex-nowrap overflow-x-auto no-scrollbar gap-x-6 sm:gap-x-8 gap-y-2 text-[10px] sm:text-sm text-gray-400 font-medium uppercase tracking-widest pr-24 sm:pr-16 w-full mask-linear pb-1">
                     <!-- JS Generated -->
                 </div>
                 <button onclick="closeAllOverlays()" class="absolute right-6 lg:right-12 top-1/2 -translate-y-1/2 flex items-center text-xs uppercase tracking-[0.2em] font-bold hover:text-[#6B0D16] transition-colors z-20 bg-white pl-4">
-                    <span class="mr-2">Close</span>
-                    <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M6 18L18 6M6 6l12 12" />
-                    </svg>
-                </button>
+                   <span class="mr-2 hidden sm:block">Close</span>
+                   <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M6 18L18 6M6 6l12 12" />
+                   </svg>
+                 </button>
             </div>
         </div>
 
