--- a/index.html
+++ b/index.html
@@ -1177,7 +1177,7 @@
                     "조달청, 신제품인증, 신기술인증 심사위원"
                 ],
                 // US Data (Added)
-                descEn: ["From Seoul Nat'l Univ.", "From Kim & Chang", "SW/ICT Specialist"],
+                descEn: ["B.S., Seoul Nat'l Univ.", "Formerly at Kim & Chang", "SW/ICT Specialist"],
                 detailedExperienceEn: [
                     {
                         title: "Patent Prosecution",
@@ -1340,7 +1340,7 @@
                     "초기 창업 패키지 심사위원"
                 ],
                 // US Data
-                descEn: ["From Sogang Univ.", "Corporate Patent Strategy Specialist", "Construction Technology Specialist"],
+                descEn: ["B.S., Sogang Univ.", "Corporate Patent Strategy Specialist", "Construction Technology Specialist"],
                 detailedExperienceEn: [
                    {
                         title: "Corporate Patent Strategy",
