--- a/index.html
+++ b/index.html
@@ -1183,26 +1183,26 @@
                         title: "Patent Prosecution",
                         items: [
                             "Patent filings for global semiconductor companies",
-                            "Patent filings for SW/ICT based startups",
-                            "Buliding early-stage patent porfolios for startups",
+                            "Patent filings for SW/ICT-based startups",
+                            "Building early-stage patent portfolios for startups",
                             "Extensive experience in advanced technologies such as AI and virtual assets"
                         ]
                     },
                     {
                         title: "Patent Litigation",
                         items: [
-                            "Specialized in global disputes related to semiconductor deposition equipment",
-                            "Specialized in trademark disputes for domestic gaming companies",
-                            "Specialized in disputes for domestic material, component, and equipment companies"
+                            "Represented global semiconductor companies in deposition equipment disputes",
+                            "Successfully handled trademark disputes for domestic gaming companies",
+                            "Advised on disputes involving domestic advanced materials and industrial equipment companies"
                         ]
                     },
                     {
                         title: "IP Advisory",
                         items: [
-                            "Support for selecting local representatives in multiple countries",
-                            "Experience in advising global cosmetics company",
-                            "Extensive experience responding to warning letters and licensing",
-                            "Extensive experience conducting IT technology trend research and invalidation searches"
+                            "Support for selecting Local Counsel in multiple countries",
+                            "Experience in advising global cosmetics companies",
+                            "Extensive experience in handling Cease and Desist letters and licensing negotiations",
+                            "Extensive experience conducting IT technology IP Landscaping and invalidation searches"
                         ]
                     }
                 ],
@@ -1212,7 +1212,7 @@
                     "Former Patent Attorney at Kim & Chang (International IP Dept.)",
                     "Former Patent Attorney at Kasan IP Law Firm (SW/ICT Team)",
                     "Regular member of the Korean Patent Attorneys Association (KPAA)",
-                    "Public Procurement Service, New Product Certification, New Technology Certification Examiner"
+                    "Examiner for New Product/Technology Certification, Public Procurement Service"
                 ],
                 email: "tspark@taurusip.com", 
                 phone: "02-123-4567", 
