--- a/index.html
+++ b/index.html
@@ -1377,8 +1377,8 @@
                 educationEn: [
                     "B.S., Department of Mechanical Engineering, Sogang University",
                     "Managing Partner, Patent Attorney at Taurus IP Law Firm",
-                    "Formerly IP Strategy Center, Legal Department, POSCO",
-                    "Formerly Hyundai Engineering & Construction Strategic Planning Office",
+                    "Formerly at IP Strategy Center, Legal Department, POSCO",
+                    "Formerly at Hyundai Engineering & Construction Strategic Planning Office",
                     "Former Patent Attorney at Thessen International Patent & Law Firm",
                     "Former Patent Attorney at Jeongan Patent Firm",
                     "Regular member of the Korean Patent Attorneys Association (KPAA)",
