--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="황소 특허법률사무소">
     <meta property="og:description" content="아이디어에 정의를, 혁신에 가치를 더하다">
-    <meta property="og:image" content="./logo/share_new.png"> 
+    <meta property="og:image" content="./logo/share_update.png"> 
     <meta property="og:url" content="https://www.taurusip.com">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
 
     <!-- [파비콘 설정] -->
-    <link rel="icon" type="image/png" href="./logo/favicon.png">
+    <link rel="icon" type="image/png" href="./logo/favicon_update.png">
     <link rel="apple-touch-icon" href="./favicon.png">
 
     <script src="https://cdn.tailwindcss.com"></script>
