--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <!-- [파비콘 설정] -->
     <link rel="icon" type="image/png" href="./logo/favicon_update.png">
-    <link rel="apple-touch-icon" href="./favicon_update.png">
+    <link rel="apple-touch-icon" href="./logo/favicon_update.png">
 
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+KR:wght@300;400;700&family=Montserrat:wght@200;300;400;500;600&display=swap" rel="stylesheet">
@@ -1759,3 +1759,4 @@
 </body>
 
 </html>
+
