--- a/index.html
+++ b/index.html
@@ -1386,8 +1386,8 @@
                 ],
                 email: "dklee@taurusip.com", 
                 phone: "02-123-4570", 
-                imgCard: "https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?auto=format&fit=crop&q=80&w=600",
-                imgDetail: "https://images.unsplash.com/photo-1519085360753-af0119f7cbe7?auto=format&fit=crop&q=80&w=800" 
+                imgCard: "./professionals/dklee_L.webp", 
+                imgDetail: "./professionals/dklee.webp" 
             }
         ];
 
@@ -1757,8 +1757,4 @@
         window.addEventListener('load', init);
     </script>
 </body>
-
 </html>
-
-
-
