--- a/index.html
+++ b/index.html
@@ -1251,8 +1251,8 @@
                 ],
                 email: "mw.lee@taurusip.com", 
                 phone: "02-123-4568", 
-                imgCard: "https://images.unsplash.com/photo-1519085360753-af0119f7cbe7?auto=format&fit=crop&q=80&w=600",
-                imgDetail: "https://images.unsplash.com/photo-1556157382-97eda2d62296?auto=format&fit=crop&q=80&w=800" 
+                imgCard: "./professionals/mwlee_L.webp", 
+                imgDetail: "./professionals/mwlee.webp" 
             },
             { 
                 id: "kim", 
@@ -1286,8 +1286,8 @@
                 ],
                 email: "dh.kim@taurusip.com", 
                 phone: "02-123-4569", 
-                imgCard: "https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?auto=format&fit=crop&q=80&w=600",
-                imgDetail: "https://images.unsplash.com/photo-1500648767791-00dcc994a43e?auto=format&fit=crop&q=80&w=800"
+                imgCard: "./professionals/dhkim_L.webp", 
+                imgDetail: "./professionals/dhkim.webp"
             },
             { 
                 id: "lee_dg", 
